--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: bulma-clean-theme
 
 # Site Settings
 fixed_navbar: top
-permalink: pretty
+permalink: "pretty"
 footer_menu: footer_menu
 locale: "en"
 lang: "en"
@@ -46,7 +46,7 @@ defaults:
   - scope:
       path: ""
     values:
-      layout: page
+      layout: "page"
       image:
         path: "/assets/images/set-outlooksignatures opengraph1200x630.png"
         height: 1200
@@ -83,11 +83,11 @@ pagination:
   # How many objects per paginated page, used to be `paginate` (default: 0, means all)
   per_page: 5
   # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: '/:num/' # Pages are index.html inside this folder (default)
-  #permalink: '/page/:num.html' # Pages are simple html files 
-  #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
+  permalink: "'/:num/' # Pages are index.html inside this folder (default)"
+  #permalink: "'/page/:num.html' # Pages are simple html files "
+  #permalink: "'/page/:num' # Pages are html files, linked jekyll extensionless permalink style."
   # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
-  title: ':title'
+  title: "':title'"
   # ':title - page :num'
   # Limit how many pagenated pages to create (default: 0, means all)
   limit: 0
