--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ pagination:
   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
   # Without file extension
   # indexpage: 'index'
-  indexpage: nil
+  indexpage: 
 
 feed:
   path: /feed.xml
