--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ pagination:
   extension: html
   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
   # Without file extension
-  # indexpage: 'index'
+  indexpage: 'index'
 
 
 feed:
