docs(sitemap): add changefreq and priority

--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,8 @@ defaults:
       # hero_darken: true
       lang: "en"
       locale: "en"
+      sitemap_priority: 0.5
+      sitemap_changefreq: weekly
 
 include:
   - ".well-known"
