--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ plugins:
   - jekyll-polyglot
   - jekyll-paginate-v2
   - jekyll-feed
+  - jekyll-seo-tag
 
 pagination:
   # Site-wide kill switch, disabled here it doesn't run at all 
