chore: convert from subfolders to html files

--- a/_data/de/footer_menu.yml
+++ b/_data/de/footer_menu.yml
@@ -1,5 +1,5 @@
 # Individual footer menu items
 - name: "Kontakt"
-  link: /contact/
+  link: /contact
 - name: "Rechtliches"
-  link: /legal/
+  link: /legal
