--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ pagination:
 
   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
   # Without file extension
-  indexpage: 'index'
+  #indexpage: 'index'
 
 
 feed:
