test: update blog

--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -12,7 +12,7 @@
 - name: Demo
   link: /benefactorcircle#demo
 - name: Blog
-  link: /blog
+  link: /blog/
 - name: Resources
   link: /help
   dropdown:
