--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -12,7 +12,7 @@
 - name: Demo
   link: /benefactorcircle#demo
 - name: Blog
-  link: /blog
+  link: /blog/
 - name: Ressourcen
   link: /help
   dropdown:
