--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude_from_localization: ["assets", "javascript", "images", "css", "public", "
 parallel_localization: false
 direction: ltr # left to right
 google_analytics: # UA-xxxxxxx
-title: "Set-OutlookSignatures"
+title: 
 description: "Email signatures and out-of-office replies for Exchange and Outlook. Full-featured, cost-effective, unsurpassed data privacy."
 url: "https://set-outlooksignatures.com" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. "/blog"
