--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-redirect-from
+  #- jekyll-redirect-from
 
 pagination:
   # Site-wide kill switch, disabled here it doesn't run at all 
