fix: add logo entry to feed configuration in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -138,3 +138,4 @@ pagination:
 feed:
   path: /feed.xml
   icon: "/assets/images/set-outlooksignatures icon.ico"
+  logo: "/assets/images/set-outlooksignatures icon.ico"
