refactor: update navigation labels from 'Resources' to 'Help' in English and German navigation files

--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -13,7 +13,7 @@
   link: /benefactorcircle#demo
 - name: Blog
   link: /blog/
-- name: Ressourcen
+- name: Hilfe
   link: /help
   dropdown:
   - name: Häufig gestellte Fragen (FAQ)
