--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -13,7 +13,7 @@
   link: /benefactorcircle#demo
 - name: Blog
   link: /blog/
-- name: Resources
+- name: Help
   link: /help
   dropdown:
   - name: Frequently asked questions (FAQ)
