chore: Simplify navigation

--- a/_data/en/footer_menu.yml
+++ b/_data/en/footer_menu.yml
@@ -1,5 +1,5 @@
 # Individual footer menu items
-- name: "Support and Contact"
+- name: "Support and contact"
   link: /support
-- name: "Impress and Legal Information"
+- name: "Impress and legal information"
   link: /legal
