--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -26,5 +26,5 @@
     link: /faq
   - name: The Outlook add-in
     link: /outlookaddin
-  - name: Support and Contact
+  - name: Support and contact
     link: /support
