chore: update 'Benefactor Circle' to 'Benefactor Circle Add-On' in navigation

--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -5,7 +5,7 @@
 - name: Download
   link: /download
 - name: |
-    <span style="font-weight: bold; background-image: linear-gradient(to right, darkgoldenrod, goldenrod, darkgoldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle</span>
+    <span style="font-weight: bold; background-image: linear-gradient(to right, darkgoldenrod, goldenrod, darkgoldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle Add-On</span>
   link: /benefactorcircle
 - name: Demo
   link: /benefactorcircle#demo
