--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -4,6 +4,7 @@
   link: /quickstart
 - name: Download
   link: /download
+- name: "|"
 - name: |
     <span style="font-weight: bold; background-image: linear-gradient(to right, darkgoldenrod, goldenrod, darkgoldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle Add-On</span>
   link: /benefactorcircle
@@ -11,6 +12,7 @@
   link: /benefactorcircle#demo
 - name: Preis
   link: /benefactorcircle#price
+- name: "|"
 - name: Blog
   link: /blog/
 - name: Hilfe
