--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -6,7 +6,7 @@
   link: /download
 - name: ""
 - name: |
-    <span style="font-weight: bold; background-image: linear-gradient(to right, darkgoldenrod, goldenrod, darkgoldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle add-on</span>
+    <span style="font-weight: bold; background-image: inear-gradient(to bottom right, darkgoldenrod, goldenrod, goldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle add-on</span>
   link: /benefactorcircle
 - name: Demo
   link: /benefactorcircle#demo
