Refactor Benefactor Circle add-on styling across multiple documents
- Updated the styling of the "Benefactor Circle add-on" text to use a solid color (darkgoldenrod) instead of a gradient background for better readability and consistency across various markdown files.
- Modified references in the following files: benefactorcircle.en.md, download.de.md, download.en.md, features.de.md, features.en.md, implementationapproach.de.md, implementationapproach.en.md, index.de.md, index.en.md, quickstart.de.md, quickstart.en.md, support.de.md, and support.en.md.

--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -6,7 +6,7 @@
   link: /download
 - name: ""
 - name: |
-    <span style="font-weight: bold; color: goldenrod);">Benefactor Circle Add-On</span>
+    <span style="font-weight: bold; color: goldenrod;">Benefactor Circle Add-On</span>
   link: /benefactorcircle
 - name: Demo
   link: /benefactorcircle#demo
