docs(search): Add "Continue on GitHub"

--- a/_data/en/strings.yml
+++ b/_data/en/strings.yml
@@ -9,6 +9,6 @@ search_search-input_placeholder_loading: "Loading data…"
 search_search-input_placeholder_ready: "Type to search"
 search_resultsContainer_placeholder_queryEmpty: "Please enter a valid search term."
 search_resultsContainer_placeholder_queryNoResults: "No results found."
-search_resultsContainer_continueOnGitHub: "Continue your search in the Set-OutlookSignatures GitHub repository (source code, issues, discussions)"
+search_resultsContainer_continueOnGitHub: "Search in the Set-OutlookSignatures GitHub repository (source code, issues, discussions)"
 
 post_read_full: "Read full post"
