fix(docs): update 'Demo' to 'Demo & Free Trial' for consistency in navigation and documentation

--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -8,7 +8,7 @@
 - name: |
     <span style="font-weight: bold; color: goldenrod;">Benefactor Circle add-on</span>
   link: /benefactorcircle
-- name: Demo
+- name: Demo & Free Trial
   link: /benefactorcircle#demo
 - name: Price
   link: /benefactorcircle#price
