--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -8,7 +8,7 @@
 - name: |
     <span style="font-weight: bold; color: goldenrod;">Benefactor Circle Add-on</span>
   link: /benefactorcircle
-- name: Demo
+- name: Demo & Free Trial
   link: /benefactorcircle#demo
 - name: Preis
   link: /benefactorcircle#price
