--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -4,7 +4,8 @@
   link: /quickstart
 - name: Download
   link: /download
-- name: "∙"
+- name: ""
+- name: ""
 - name: |
     <span style="font-weight: bold; color: goldenrod;">Benefactor Circle Add-on</span>
   link: /benefactorcircle
@@ -12,7 +13,8 @@
   link: /benefactorcircle#demo
 - name: Preis
   link: /benefactorcircle#price
-- name: "∙"
+- name: ""
+- name: ""
 - name: Blog
   link: /blog/
 - name: Hilfe
