--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -5,6 +5,7 @@
 - name: Download
   link: /download
 - name: ""
+- name: ""
 - name: |
     <span style="font-weight: bold; color: goldenrod;">Benefactor Circle add-on</span>
   link: /benefactorcircle
@@ -12,6 +13,7 @@
   link: /benefactorcircle#demo
 - name: Price
   link: /benefactorcircle#price
+- name: ""
 - name: ""
 - name: Blog
   link: /blog/
