docs: Correctly write "Add-in" in German.

--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -28,7 +28,7 @@
     link: /parameters
   - name: Häufig gestellte Fragen (FAQ)
     link: /faq
-  - name: Das Outlook Add-In
+  - name: Das Outlook Add-in
     link: /outlookaddin
   - name: Support und Kontakt
     link: /support
